fix grids gap

--- a/components/LaunchPrograms/LaunchProgram/LaunchProgram.module.css
+++ b/components/LaunchPrograms/LaunchProgram/LaunchProgram.module.css
@@ -7,6 +7,7 @@
     width: 250px;
     height: 480px;
     padding: 20px 0px 20px;
+    min-width: 250px;
 }
 
 .img {
