--- a/components/LaunchPrograms/LaunchPrograms.module.css
+++ b/components/LaunchPrograms/LaunchPrograms.module.css
@@ -3,4 +3,6 @@
     grid-template-columns: 1fr 1fr 1fr 1fr;
     grid-gap: 14px;
     margin-right: 20px;
+    flex-shrink: 0;
+    
 }
